kustomize/base/serviceb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceb
spec:
  selector:
    matchLabels:
      app: serviceb
  template:
    metadata:
      labels:
        app: serviceb
    spec:
      containers:
      - name: serviceb
        image: bcetinturk/go-dummy-serviceb:1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
