kustomize/base/serviceb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviceb
spec:
  selector:
    app: serviceb
  ports:
  - port: 80
    targetPort: 8081
