kustomize/base/serviceb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serviceb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: serviceb
spec:
  rules:
  - host: serviceb.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: serviceb
            port: 
              number: 80
